--- a/function_calling.ipynb
+++ b/function_calling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -24,11 +24,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "As an AI, I don't have access to your personal data or accounts, including Salesforce. To view your deals in Salesforce, you'll need to log in to your Salesforce account and navigate through the platform. Here's a step-by-step guide on how you can find your deals:\n",
+      "\n",
+      "1. **Log in to Salesforce:**\n",
+      "   Go to the Salesforce login page and enter your username and password.\n",
+      "\n",
+      "2. **Navigate to `Opportunities`:**\n",
+      "   - Once logged in, click the `App Launcher` (grid icon in the upper-left corner).\n",
+      "   - Search for `Opportunities` and click on it.\n",
+      "\n",
+      "3. **View Your Deals:**\n",
+      "   - In the `Opportunities` tab, you'll see a list of all deals.\n",
+      "   - You can filter these deals based on different criteria, such as stage, close date, amount, or owner, by using the filters at the top of the page.\n",
+      "\n",
+      "4. **Check Specific Information:**\n",
+      "   - Click on any opportunity to see more details about that deal, including related activities, contacts, and notes.\n",
+      "\n",
+      "5. **Reports and Dashboards:**\n",
+      "   - You can also use `Reports` and `Dashboards` to get a more visual overview of your deals.\n",
+      "   - Go to the `Reports` tab and run an existing report or create a new one based on your needs.\n",
+      "   - Use the `Dashboards` tab to view graphical representations of your sales data.\n",
+      "\n",
+      "If you need more detailed assistance, consider reaching out to your Salesforce administrator or consulting the Salesforce Help & Training portal.\n"
+     ]
+    }
+   ],
    "source": [
     "completion = openai.ChatCompletion.create(\n",
     "    model=\"gpt-4o-2024-05-13\",\n",
@@ -45,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -69,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -110,11 +139,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"role\": \"assistant\",\n",
+      "  \"content\": \"Here are your open deals in Salesforce:\\n\\n1. **Deal Name:** Acme Corporation Expansion\\n   - **Amount:** $100,000\\n   - **Stage:** Proposal/Price Quote\\n   - **Close Date:** 2023-11-15\\n\\n2. **Deal Name:** Innovative Solutions Partnership\\n   - **Amount:** $250,000\\n   - **Stage:** Negotiation/Review\\n   - **Close Date:** 2023-12-01\\n\\n3. **Deal Name:** Future Tech Contract\\n   - **Amount:** $150,000\\n   - **Stage:** Prospecting\\n   - **Close Date:** 2023-12-12\\n\\nPlease let me know if you need more details or any other information!\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "user_message = \"What are my deals in Salesforce?\"\n",
     "\n",
@@ -140,7 +180,7 @@
     "        function_response = f\"{function_name} result: {function_result}\"\n",
     "\n",
     "        completion = openai.ChatCompletion.create(\n",
-    "            model=\"gpt-4o-2024-05-13\",\n",
+    "            model=\"gpt-4o-2024-05-13\",ś\n",
     "            messages=[\n",
     "                {\"role\": \"user\", \"content\": user_message},\n",
     "                {\"role\": \"assistant\", \"content\": output[\"content\"], \"function_call\": output[\"function_call\"]},\n",
@@ -169,14 +209,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
