--- a/rag.ipynb
+++ b/rag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -55,22 +55,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Document(page_content='2 UNDP Global Project Contribution \\nPartners  \\n \\nIn 2022, the Global Project on Managing Development Co-operation  Effectively received support \\nfrom Canada, the European Commission, Germany, the Republic of Korea, Sweden and Switzerland \\nto implement the priorities outlined in the Global Project document and in line with the 2020 -2022 \\nWork Programme of the Global Partn ership for Effective Development.  \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\nCopyright © 2023 United Nations Development Programme  \\nAll rights reserved.  \\nUNDP is the leading United Nations organization fighting to end the injustice of poverty, inequality, and climate \\nchange. Working with our broad network of experts and partners in 170 countries, we help nations to build \\nintegrated, lasting solutions for pe ople and planet. Learn more at undp.org or follow at @UNDP.  \\nThis publication or parts of it may not be reproduced; stored by means of any system; or transmitted, in any form \\nor by any medium, whether electronic, mechanical, photocopied, recorded or of any  other type, without the prior \\npermission of the United Nations Development Programme.', metadata={'source': 'example_data/sample_pdf.pdf', 'page': 1})"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/katarzynahewelt/Desktop/rag-vs-fc/venv/lib/python3.11/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The class `OpenAIEmbeddings` was deprecated in LangChain 0.0.9 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAIEmbeddings`.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize OpenAI embeddings\n",
     "embeddings = OpenAIEmbeddings()"
@@ -78,11 +98,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/katarzynahewelt/Desktop/rag-vs-fc/venv/lib/python3.11/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: Since Chroma 0.4.x the manual persistence method is no longer supported as docs are automatically persisted.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
    "source": [
     "embeddings = OpenAIEmbeddings()\n",
     "# Create a Chroma vector store and persist it\n",
@@ -98,11 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/katarzynahewelt/Desktop/rag-vs-fc/venv/lib/python3.11/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import ChatOpenAI`.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
    "source": [
     "# Define a prompt template for the question-answering system\n",
     "template = \"\"\"\n",
@@ -135,11 +173,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/katarzynahewelt/Desktop/rag-vs-fc/venv/lib/python3.11/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The method `Chain.__call__` was deprecated in langchain 0.1.0 and will be removed in 0.3.0. Use invoke instead.\n",
+      "  warn_deprecated(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'query': 'What is the main topic of the document?',\n",
+      " 'result': 'The main topic of the document is the Global Partnership for '\n",
+      "           'Effective Development Cooperation, focusing on key results '\n",
+      "           'achieved in 2022, challenges, and the way forward, as well as '\n",
+      "           'financial project execution and donor information for that year.',\n",
+      " 'source_documents': [Document(page_content='1', metadata={'page': 0, 'source': 'example_data/sample_pdf.pdf'}),\n",
+      "                      Document(page_content='4 Table of Content  \\n \\n \\n \\nAcronyms   5 \\nAbout the G lobal Partnership  \\nfor Effective Development Cooperation   6 \\nKey Results Achieved in 2022  8 \\n▪ Output 1  8 \\n▪ Output 2  14 \\n▪ Output 3  21 \\n▪ Output 4 and 5  27 \\nChallenges and Way forward  34 \\nAnnex I: Financial Project  Execution in 2022 (Provisional)  35 \\nAnnex II: List of Donors in 2022  36 \\nAnnex III: Result Framework and Financing report  37', metadata={'page': 3, 'source': 'example_data/sample_pdf.pdf'}),\n",
+      "                      Document(page_content='12 development co -operation and how development partners align and use them?  \\n• Transparency : What actions are partner countries and development partners taking to \\nmake development co -operation transparent?  \\n• Leaving No One Behind : How is everyone consulted and targeted in developm ent co -\\noperation? And is disaggregated data available to monitor progress?  \\n \\n \\nThe content of the new monitoring framework preserves comparability and continuity of trends by \\nretaining all past measurements, with the exception of the previous Indicator 3 on public -private \\ndialogue which was replaced by the Kampala Principles assessme nt.', metadata={'page': 11, 'source': 'example_data/sample_pdf.pdf'}),\n",
+      "                      Document(page_content='coordinators , who are the main government focal points \\nto take the lead in implementing the monitoring exercise \\nat country level , was sufficiently captured in the \\nmonitoring guide, JST conducted pilot calls with Egypt, \\nKenya and Samoa in November 2022.', metadata={'page': 8, 'source': 'example_data/sample_pdf.pdf'})]}\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask a question and print the answer\n",
     "question = \"What is the main topic of the document?\"\n",
@@ -157,14 +219,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
