--- a/function_calling.ipynb
+++ b/function_calling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -33,28 +45,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "As an AI, I don't have access to your personal data or accounts, including Salesforce. To view your deals in Salesforce, you'll need to log in to your Salesforce account and navigate through the platform. Here's a step-by-step guide on how you can find your deals:\n",
+      "In Salesforce, \"deals\" are typically referred to as \"Opportunities.\" Opportunities represent potential revenue-generating events or sales in your pipeline. Here’s how you can view and manage your deals or opportunities in Salesforce:\n",
       "\n",
-      "1. **Log in to Salesforce:**\n",
-      "   Go to the Salesforce login page and enter your username and password.\n",
+      "1. **Log In** to your Salesforce account.\n",
       "\n",
-      "2. **Navigate to `Opportunities`:**\n",
-      "   - Once logged in, click the `App Launcher` (grid icon in the upper-left corner).\n",
-      "   - Search for `Opportunities` and click on it.\n",
+      "2. **Navigate to the Opportunities Tab**:\n",
+      "   - If using Salesforce Lightning: Go to the App Launcher (the nine-dot grid icon) and search for or select \"Opportunities.\"\n",
+      "   - If using Salesforce Classic: Click on the \"Opportunities\" tab.\n",
       "\n",
-      "3. **View Your Deals:**\n",
-      "   - In the `Opportunities` tab, you'll see a list of all deals.\n",
-      "   - You can filter these deals based on different criteria, such as stage, close date, amount, or owner, by using the filters at the top of the page.\n",
+      "3. **View and Manage Opportunities**:\n",
+      "   - **List Views**: You can select pre-defined list views such as \"All Opportunities,\" \"My Opportunities,\" or create custom list views.\n",
+      "   - **Kanban Board**: In Lightning, you can use the Kanban view to see opportunities visually by stage. This allows for easy drag-and-drop functionality to move deals through the sales process.\n",
+      "   - **Opportunity Record**: Click on an individual opportunity to see detailed information including stages, potential revenue, close dates, and related activities.\n",
       "\n",
-      "4. **Check Specific Information:**\n",
-      "   - Click on any opportunity to see more details about that deal, including related activities, contacts, and notes.\n",
+      "4. **Filters and Reports**:\n",
+      "   - Use filters to narrow down opportunities by criteria such as close date, stage, or owner.\n",
+      "   - Create or access existing reports to get a comprehensive overview of your sales pipeline.\n",
       "\n",
-      "5. **Reports and Dashboards:**\n",
-      "   - You can also use `Reports` and `Dashboards` to get a more visual overview of your deals.\n",
-      "   - Go to the `Reports` tab and run an existing report or create a new one based on your needs.\n",
-      "   - Use the `Dashboards` tab to view graphical representations of your sales data.\n",
+      "5. **Dashboards**:\n",
+      "   - Visualize your deals using dashboards that can show metrics like the value of deals in various stages, top opportunities, forecasted revenue, etc.\n",
       "\n",
-      "If you need more detailed assistance, consider reaching out to your Salesforce administrator or consulting the Salesforce Help & Training portal.\n"
+      "Remember, the specifics of what you see and can do may vary depending on your role, permissions, and the customizations made in your Salesforce environment.\n",
+      "\n",
+      "If you need more specific information or step-by-step guidance, please provide details about which Salesforce version you're using (Classic, Lightning) and any custom configurations you might have.\n"
      ]
     }
    ],
@@ -74,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +163,7 @@
      "text": [
       "{\n",
       "  \"role\": \"assistant\",\n",
-      "  \"content\": \"Here are your open deals in Salesforce:\\n\\n1. **Deal Name:** Acme Corporation Expansion\\n   - **Amount:** $100,000\\n   - **Stage:** Proposal/Price Quote\\n   - **Close Date:** 2023-11-15\\n\\n2. **Deal Name:** Innovative Solutions Partnership\\n   - **Amount:** $250,000\\n   - **Stage:** Negotiation/Review\\n   - **Close Date:** 2023-12-01\\n\\n3. **Deal Name:** Future Tech Contract\\n   - **Amount:** $150,000\\n   - **Stage:** Prospecting\\n   - **Close Date:** 2023-12-12\\n\\nPlease let me know if you need more details or any other information!\"\n",
+      "  \"content\": \"Here are your open deals in Salesforce:\\n\\n1. **Deal ID:** 001\\n   - **Name:** Opportunity One\\n   - **Stage:** Negotiation\\n   - **Close Date:** 2023-12-31\\n   - **Amount:** $10,000\\n\\n2. **Deal ID:** 002\\n   - **Name:** Opportunity Two\\n   - **Stage:** Proposal\\n   - **Close Date:** 2023-11-30\\n   - **Amount:** $20,000\\n\\n3. **Deal ID:** 003\\n   - **Name:** Opportunity Three\\n   - **Stage:** Qualification\\n   - **Close Date:** 2024-01-15\\n   - **Amount:** $5,000\\n\\nPlease let me know if you need more details or any specific information about any of these deals.\"\n",
       "}\n"
      ]
     }
